--- a/LOGIN/admin.html
+++ b/LOGIN/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="admin styles.css">
 </head>
 <body>
     <div class="login-container">
@@ -25,6 +25,6 @@
             <button type="submit" class="login-button">Login</button>
         </form>
     </div>
-    <script src="script.js"></script>
+    <script src="admin script.js"></script>
 </body>
 </html>
