--- a/LOGIN/admin.html
+++ b/LOGIN/admin.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Admin Login</h2>
+        <h2>Office Login</h2>
         <form id="login-form">
             <div class="input-group">
-                <label for="username">User name</label>
+                <label for="username">Username</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="input-group">
