--- a/LOGIN/Login.html
+++ b/LOGIN/Login.html
@@ -24,7 +24,7 @@
             </form>
             <div class="login-footer">
                 <p><a href="#">Forgot password?</a></p>
-                <p>Don't have an account? <a href="admin logi/index.html">Sign up</a></p>
+                <p>Don't have an account? <a href="LOGIN/admin.html">Sign up</a></p>
             </div>
         </div>
     </div>
