--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                  <li><a href="#travel">Service</a></li>
                                  <li><a href="#blog">Blog</a></li>
                                  <li><a href="#contact">Contact Us</a></li>
-                                 <li><a href="LOGIN/Login.html">Office Login</a></li>
+                                 <li><a href="dashboard/LOGIN/Login.html">Office Login</a></li>
                               </ul>
                            </nav>
                         </div>
@@ -146,28 +146,27 @@
             <div class="row">
                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                   <div class="traveling-box">
-                     <i><img src="icon/travel-icon.png" alt="icon"/></i>
+                     <i><a href="Whatsapp/WP.html"><img src="icon/package.png" alt="icon"/></a></i>
                      <h3>Domestic Package</h3>
                      <p> We provide All India Tour Package </p>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                   <div class="traveling-box">
-                     <i><img src="icon/travel-icon2.png" alt="icon"/></i>
-                     <h3>Flight Ticket
-                        Booking</h3>
+                     <i><a href="Whatsapp/WT.html"><img src="icon/train.png" alt="icon"/></a></i>
+                     <h3>Train Ticket Booking</h3>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                   <div class="traveling-box">
-                     <i><img src="icon/travel-icon3.png" alt="icon"/></i>
+                     <i><a href="Whatsapp/WB.html"><img src="icon/bus.png" alt="icon"/></a></i>
                      <h3>Bus Booking</h3>
                      <p> We provide A/c or Non A/c bus </p>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                   <div class="traveling-box">
-                     <i><img src="icon/travel-icon4.png" alt="icon"/></i>
+                     <i><a href="Whatsapp/WR.html"><img src="icon/resort.png" alt="icon"/></a></i>
                      <h3>Hotel / Resort Booking</h3>
                      <p> We provide you best resort and hotel all over India</p>
                   </div>
@@ -314,7 +313,7 @@
                         <h3>CONTACT US</h3>
                         <span>Malappuram | Calicut | Kannur | Mangalore<br>
                         <br>
-                        79941 89193 | 70254 50050 | 75598 94744<br><br>
+                        +91 79941 89193 | +91 70254 50050 | +91 75598 94744<br><br>
                      soofitravelogues@gmail.com</span>
                      </div>
                   </div>
@@ -329,7 +328,24 @@
                         </ul>
                      </div>
                   </div>
-                  
+                  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                     <div class="Follow">
+                        <h3> Contact</h3>
+                        <div class="row">
+                           <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                              <input class="Newsletter" placeholder="Name" type="text">
+                           </div>
+                           <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                              <input class="Newsletter" placeholder="Email" type="text">
+                           </div>
+                           <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                              <textarea class="textarea" placeholder="comment" type="text">Comment</textarea>
+                           </div>
+                        </div>
+                        <button class="Subscribe">Submit</button>
+                     </div>
+                  </div>
+               </div>
                <div class="copyright">
                   <div class="container">
                      <p>Copyright 2024 All Right Reserved By <a href="https://www.instagram.com/murshiid__/">Murshid</a></p>
