--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                  <li><a href="#travel">Service</a></li>
                                  <li><a href="#blog">Blog</a></li>
                                  <li><a href="#contact">Contact Us</a></li>
-                                 <li><a href="dashboard/LOGIN/Login.html">Office Login</a></li>
+                                 <li><a href="LOGIN/Login.html">Office Login</a></li>
                               </ul>
                            </nav>
                         </div>
