--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                                  <li><a href="#travel">Service</a></li>
                                  <li><a href="#blog">Blog</a></li>
                                  <li><a href="#contact">Contact Us</a></li>
-                                 <li><a href="soofi/LOGIN/Login.html">Office Login</a></li>
-                              </ul>
+                                 <li><a href="https://soofigroup.github.io/soofi/LOGIN/Login.html">Office Login</a></li>
+                              </ul>soofi
                            </nav>
                         </div>
                      </div>
