--- a/Whatsapp/WR.html
+++ b/Whatsapp/WR.html
@@ -227,10 +227,10 @@
             var url = "https://wa.me/917025450050?text="
                 + "Name: " + name + "%0a"
                 + "Phone No: " + phone + "%0a"
-                + "Count: " + count + "%0a"
+                + "Adults: " + place + "%0a"
+                + "Kids: " + count + "%0a"
                 + "No. of Rooms: " + rooms + "%0a" // Added to WhatsApp message
                 + "From: " + pickup + "%0a"
-                + "To: " + place + "%0a"
                 + "Check-In: " + checkin + "%0a"
                 + "Check-Out: " + checkout + "%0a"
                 + "Type: " + service + "%0a"
