--- a/Whatsapp/WR.html
+++ b/Whatsapp/WR.html
@@ -230,7 +230,7 @@
                 + "Adults: " + place + "%0a"
                 + "Kids: " + count + "%0a"
                 + "No. of Rooms: " + rooms + "%0a" // Added to WhatsApp message
-                + "From: " + pickup + "%0a"
+                + "To: " + pickup + "%0a"
                 + "Check-In: " + checkin + "%0a"
                 + "Check-Out: " + checkout + "%0a"
                 + "Type: " + service + "%0a"
